--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           lfs: true
-          token: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
           folder: build
           clean: true
