Finished initialization of project.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,17 @@
           ".tsx"
         ]
       }
+    ],
+    "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "**/*.stories.*",
+          "**/.storybook/**/*.*"
+        ],
+        "peerDependencies": true
+      }
     ]
   }
 }
