Modifies grid, minus strict mode.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,12 @@
         ],
         "peerDependencies": true
       }
-    ]
+    ],
+    "no-param-reassign": ["error", {
+      "props": true,
+      "ignorePropertyModificationsFor": [
+        "state"
+      ]
+    }]
   }
 }
