Normalization of data is goodd

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
       "ignorePropertyModificationsFor": [
         "state"
       ]
-    }]
+    }],
+    "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
   }
 }
