--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,19 @@
     "eslint-config-airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "prettier"
+    "prettier",
+    "react-app",
+    "react-app/jest"
   ],
   "overrides": [
+    {
+      "files": [
+        "**/*.stories.*"
+      ],
+      "rules": {
+        "import/no-anonymous-default-export": "off"
+      }
+    }
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
