--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,14 @@
     "prettier"
   ],
   "overrides": [
+    {
+      "files": [
+        "**/*.stories.*"
+      ],
+      "rules": {
+        "import/no-anonymous-default-export": "off"
+      }
+    }
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -52,6 +60,12 @@
         "state"
       ]
     }],
-    "no-underscore-dangle":  ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle":  ["error", { "allow": ["_id"] }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
